--- a/extension/package.json
+++ b/extension/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "es5-shim": "^4.5.7",
+    "handlebars": "^4.0.5",
     "jquery": "^2.2.3",
     "underscore": "^1.8.3"
   }
